test_fm/_test13.ref
Error: redeclaration of 'x' (defined in class 'Main') as field in file '_test13.nj' on line 8
