test_fm/_test13.nj
//
// field declaration
// field redeclaration in same class
//

public class Main extends Object {
    Integer x;
    Integer x;
    public static void main() {}
}

